<resources>
    <string name="app_name">Salata</string>
    <string name="navigation_drawer_open">Open Drawer</string>
    <string name="navigation_drawer_close">Close Drawer</string>
    <string name="login_arabic">تسجيل الدخول</string>

    <string name="choose_address">اختر عنوان</string>
    <string name="choose_delivery_day">اختر يوم التسليم</string>
    <string name="choose_delivery_time">اختر موعد التسليم</string>
    <string name="confirm">تأكيد</string>
    <string name="cancel">إلغاء</string>
    <string name="nav_main">الرئيسية</string>
    <string name="nav_orders">طلباتى</string>
    <string name="nav_settings">إعدادات الحساب</string>
    <string name="nav_add_address">إضافة عنوان آخر</string>
    <string name="nav_sign_up">سجل مشترك جديد</string>
    <string name="nav_about">عن سلطة</string>
    <string name="nav_contact">إتصل بنا</string>
    <string name="nav_facebook">فيسبوك</string>
    <string name="nav_twitter">تويتر</string>
    <string name="nav_instagram">انستجرام</string>
    <string name="nav_sign_out">تسجيل الخروج</string>
    <string name="demo_bill_price">اجمالى المبلغ: 1500 جنيه فقط لا غير</string>
    <string name="demo_bill_delivery_date">موعد التسليم: الاحد 22/3/2020 الساعة 01:00 ظهرا ~ 01:00 ظهرا</string>
    <string name="server_connection_error">يوجد مشكلة فى الاتصال بالانترنت</string>
    <string name="salata_unavailable_1">سلطة غير متاحة حاليا فى هذه المنطقة</string>
    <string name="salata_unavailable_2">ستكون متاحة قريبا</string>
    <string name="to_delete_order_contact_call_center">لإلغاء الطلب الرجاء الاتصال بخدمة العملاء</string>
    <string name="payment_fail">فشلت عملية الدفع</string>
</resources>
