<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        tools:context=".ui.fragments.ChooseAddressDialogFragment">

        <TextView
            android:id="@+id/textView"
            style="@style/SectionTitleTextAppearance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_address"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/address_chooser_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView" />

        <TextView
            android:id="@+id/textView2"
            style="@style/SectionTitleTextAppearance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/choose_delivery_day"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/address_chooser_group" />

        <HorizontalScrollView
            android:id="@+id/scroll_view_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:scrollbars="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView2">

            <RadioGroup
                android:id="@+id/day_chooser_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:divider="@drawable/transparent_rect_divider"
                android:orientation="horizontal"
                android:showDividers="middle|beginning" />
        </HorizontalScrollView>

        <TextView
            android:id="@+id/textView3"
            style="@style/SectionTitleTextAppearance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/choose_delivery_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/scroll_view_1" />

        <HorizontalScrollView
            android:id="@+id/scroll_view_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView3">

            <RadioGroup
                android:id="@+id/time_chooser_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@drawable/transparent_rect_divider"
                android:orientation="horizontal"
                android:showDividers="middle|beginning" />
        </HorizontalScrollView>

        <Button
            android:id="@+id/btn_cancel_address_dialog"
            style="@style/FlatButtonTextAppearance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_confirm_address_dialog"
            app:layout_constraintTop_toBottomOf="@id/scroll_view_2"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/btn_confirm_address_dialog"
            style="@style/FlatButtonTextAppearance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/btn_cancel_address_dialog" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>